@@ -2,8 +2,12 @@ apport (0.38) UNRELEASED; urgency=low
 
   * Add ./COPYING: GPL license.
   * debian/rules: Build POT file again.
+  * apport/fileutils.py: Add get_all_system_reports() and
+    get_new_system_reports() and added test cases. Now the test suite can also
+    be run as root to be able to actually check their complete behaviour.
+    Adapt the other tests to get along with running the tests as root.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 12 Jan 2007 10:35:24 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 12 Jan 2007 12:02:56 +0100
 
 apport (0.37) feisty; urgency=low
 
